welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:6: error: ';' expected but ')' found.
		if(y<nums(i) ){y=nums(i))}
                                        ^