welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
			var x=nums(0)
     var y= nums(0)
	
	for (i <- 1 to nums.length-1) {
		if(y<nums(i) ){y=nums(i))}
		if(x>nums(i)){x=nums(i)}
		else{y=y;x=x}
		} 
		
	return x-y
}
